# llm-wiki-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/llm_wiki_kit/: __init__.py  cli.py  server.py
src/llm_wiki_kit/core/: extractors.py  index.py  wiki.py
src/llm_wiki_kit/templates/: CLAUDE.md  CODEX.md  CURSOR.md  GENERIC.md
