[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki-kit"
version = "0.1.0"
description = "An MCP server that implements Karpathy's LLM Wiki pattern — persistent, LLM-maintained knowledge bases that compound over time."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sashank" },
]
keywords = ["llm", "wiki", "mcp", "mcp-server", "knowledge-base", "rag-alternative", "karpathy", "llm-wiki"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24.0"]
web = ["trafilatura>=1.0.0"]
youtube = ["youtube-transcript-api>=0.6.0"]
all = [
    "pymupdf>=1.24.0",
    "trafilatura>=1.0.0",
    "youtube-transcript-api>=0.6.0",
]

[project.scripts]
llm-wiki-kit = "llm_wiki_kit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki_kit"]

[project.urls]
Homepage = "https://github.com/iamsashank09/llm-wiki-kit"
Repository = "https://github.com/iamsashank09/llm-wiki-kit"
Issues = "https://github.com/iamsashank09/llm-wiki-kit/issues"
